# Anton-s-OpenGL-4-tutorials

./: README.md  add_cmakelists.sh  add_cmakelists.sh~  tableofcontents.txt  tableofcontents.txt~
basics/extended_initialisation/: Makefile  main.cpp  main.cpp~
basics/hello_triangle/: hello_triangle.cpp~  hello_triangle.fs  hello_triangle.vs~  main.cpp  main.cpp~  shader_read.h  shader_read.h~
basics/opengl4_shaders/: main.cpp  opengl4_shaders.fs  opengl4_shaders.vs~
frame_rate_counter/: logging.cpp~  logging.h  main.cpp
hello_triangle_shaders/: CMakeLists.txt
logging/: CMakeLists.txt~  initialisation.cpp
misc/blender/: monkey_with_anim_y_up.dae
misc/frame_rate_counter/: CMakeLists.txt  CMakeLists.txt~
misc/hardware_skinning/: #main.cpp#  CMakeCache.txt  Makefile  Mario2.blend  Mario4.fbx  cmake_install.cmake  gl_utils.h  main  main.cpp  mario_main.cpp  skin  test_fs.glsl  test_vs.glsl
misc/hello_triangle/: CMakeLists.txt~  hello_triangle.cpp  hello_triangle.cpp~
misc/hello_triangle_shaders/: hello_triangle.cpp  hello_triangle_3dtransformations.cpp
misc/logging/: initialisation.cpp~
misc/mesh_loading/: CMakeCache.txt  Makefile  main  test_fs.glsl
misc/mesh_loading/hardware_skinning/: CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  main.cpp~
misc/particles/: main  main.cpp  test_fs.glsl
misc/resources/: Mario2.dae  Mario2.mtl~  Mario2animated.mtl
tips_and_tricks/screen_capture/: CMakeLists.txt
